--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -37,14 +37,20 @@
 .secondary-button,
 .button-primary {
   text-transform: capitalize;
-  color: $dark;
+  color: $white;
   padding: 13px 40px;
   background-color: $green;
   font-size: $md;
   border-radius: 50px;
-  box-shadow: $shadow-md;
+  box-shadow: 0 0 10px rgba(0, 255, 0, 0.5); // Parlayan kölgə effekti
   cursor: pointer;
+  transition: box-shadow 0.3s ease-in-out;
+
+  &:hover {
+    box-shadow: 0 0 20px rgba(0, 255, 0, 0.7); // Hover zamanı parlaqlığı artırır
+  }
 }
+
 .secondary-button {
   background-color: #171e20;
   box-shadow: none;
