--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+
 .green {
   color: #00dc93;
 }
@@ -138,6 +139,7 @@ p {
 }
 
 @media screen and (max-width: 800px) {
+
   .grid-6,
   .grid-4,
   .grid-3 {
@@ -146,11 +148,13 @@ p {
     grid-gap: 50px;
   }
 }
+
 @media screen and (max-width: 500px) {
   .container {
     max-width: 100%;
     padding: 0 20px;
   }
+
   .grid-2,
   .grid-3,
   .grid-6,
@@ -160,11 +164,13 @@ p {
     grid-gap: 50px;
   }
 }
+
 .title-logo {
   font-size: 35px;
   -webkit-text-stroke: 1px #ffffff;
   color: transparent;
 }
+
 .title-logo span {
   font-size: 30px;
   -webkit-text-stroke: #00dc93;
@@ -174,6 +180,7 @@ p {
 .logobg {
   font-size: 60px;
 }
+
 .logobg span {
   font-size: 50px;
 }
@@ -211,6 +218,7 @@ p {
   cursor: pointer;
   transition: box-shadow 0.3s ease-in-out;
 }
+
 .secondary-button:hover,
 .button-primary:hover {
   box-shadow: 0 0 20px rgba(0, 255, 0, 0.7);
@@ -227,6 +235,7 @@ p {
   box-shadow: #080e10 0px 7px 29px 0px;
   transition: 0.5s ease-in-out;
 }
+
 .secondary-button:hover {
   color: #00dc93;
 }
@@ -238,6 +247,7 @@ p {
   padding-top: 100px;
   padding-bottom: 25px;
 }
+
 .heading-title p {
   margin: 35px 0;
   color: rgba(255, 255, 255, 0.5);
@@ -246,20 +256,24 @@ p {
 .card h1 {
   transition: 0.5s;
 }
+
 .card h1:hover {
   color: #00dc93;
   cursor: pointer;
 }
+
 .card .card-img {
   margin-bottom: 30px;
 }
+
 .card .card-img img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 50px 0 50px 0;
 }
+
 .card a {
   display: flex;
   align-items: center;
@@ -268,9 +282,11 @@ p {
   letter-spacing: 2px;
   margin-top: 14px;
 }
+
 .card a .link-icon {
   margin-left: 14px;
 }
+
 .card span {
   color: rgba(255, 255, 255, 0.4);
   margin-top: 22px;
@@ -278,13 +294,16 @@ p {
   letter-spacing: 2px;
   font-size: 14px;
 }
+
 .card ul {
   margin-top: 35px;
 }
+
 .card ul li {
   margin-bottom: 20px;
   opacity: 0.5;
 }
+
 .card .title-link {
   display: block !important;
   color: #ffffff;
@@ -326,15 +345,18 @@ p {
     top: 0;
     right: 0;
   }
+
   .slick-arrow .prev {
     top: 0;
     left: 85%;
   }
+
   .heading-title {
     max-width: 100%;
     padding: 50px 0;
   }
 }
+
 .grid-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -360,6 +382,7 @@ p {
 }
 
 @media screen and (max-width: 800px) {
+
   .grid-6,
   .grid-4,
   .grid-3 {
@@ -368,11 +391,13 @@ p {
     grid-gap: 50px;
   }
 }
+
 @media screen and (max-width: 500px) {
   .container {
     max-width: 100%;
     padding: 0 20px;
   }
+
   .grid-2,
   .grid-3,
   .grid-6,
@@ -382,21 +407,24 @@ p {
     grid-gap: 50px;
   }
 }
+
 header {
   padding: 12px 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   position: sticky;
   top: 0;
   -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
   z-index: 999;
 }
+
 header .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-direction: none;
 }
+
 header .container nav a {
   margin: 0 20px;
 }
@@ -405,6 +433,7 @@ header .container nav a {
   position: relative;
   color: #00dc93;
 }
+
 .activeLink::after {
   content: "";
   position: absolute;
@@ -419,6 +448,7 @@ header .container nav a {
   header nav {
     display: none;
   }
+
   header .openMenu {
     position: absolute;
     top: 75px;
@@ -431,19 +461,23 @@ header .container nav a {
     flex-direction: column;
     z-index: 999;
   }
+
   header .openMenu a {
     width: 100%;
     display: block;
     display: flex;
     margin-bottom: 30px !important;
   }
+
   header .button-primary {
     display: none;
   }
+
   .activeLink::after {
     display: none;
   }
 }
+
 /*  Hero Section */
 .hero {
   text-align: center;
@@ -453,6 +487,7 @@ header .container nav a {
   overflow: hidden !important;
   position: relative;
 }
+
 .hero::before {
   content: "";
   position: absolute;
@@ -466,29 +501,37 @@ header .container nav a {
   z-index: -1;
   overflow-x: hidden !important;
 }
+
 .hero .hero-title {
   font-size: 100px;
   line-height: 115px;
   font-weight: 600;
   margin: 35px 0;
 }
+
 .hero .sub-heading {
   display: flex;
   justify-content: center;
 }
+
 .hero .sub-heading .titleSm {
   margin: 0 18px;
 }
+
 .hero .sub-heading span {
   font-size: 60px;
   line-height: 0;
   color: #00dc93;
   animation: bounceText 2s ease-in-out infinite;
 }
+
 @keyframes bounceText {
-  0%, 100% {
+
+  0%,
+  100% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(-5px);
   }
@@ -497,6 +540,7 @@ header .container nav a {
 .hero-sec {
   position: relative;
 }
+
 .hero-sec::before {
   content: "";
   position: absolute;
@@ -513,34 +557,19 @@ header .container nav a {
   height: 250px;
   transition: transform 0.5s ease-in-out;
 }
+
 .expertise .card-img:hover {
   transform: scale(1.1) rotate(3deg);
 }
 
 .banner {
   margin-top: 100px;
-  opacity: 0;
-  animation: slideInScale 7s ease-out infinite; /* infinite - təkrarlanan animasiya */
 }
-@keyframes slideInScale {
-  0% {
-    opacity: 0;
-    transform: scale(0.8) translateX(-100px); /* Başlanğıcda kiçik və sola doğru */
-  }
-  50% {
-    opacity: 1;
-    transform: scale(1) translateX(0); /* Tam görünür və normal ölçüdə */
-  }
-  100% {
-    opacity: 0;
-    transform: scale(0.8) translateX(100px); /* Sona doğru sola gedir və kiçilir */
-  }
-}
+
 .banner .container {
-  border-radius: 50px 0 50px 0;
+  border-radius: 50px 50px 0;
   padding: 35px;
-  background: rgb(192, 90, 255);
-  background: linear-gradient(203deg, rgb(192, 90, 255) 0%, rgb(67, 39, 158) 100%);
+  border: 4px solid rgb(192, 90, 255);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -550,16 +579,20 @@ header .container nav a {
 .testimonial .card {
   padding: 20px;
 }
+
 .testimonial .cards {
   margin-top: 60px;
   opacity: 1;
-  transform: translateY(0); /* Kart normal vəziyyətdə olacaq */
+  transform: translateY(0);
+  /* Kart normal vəziyyətdə olacaq */
 }
+
 .testimonial .cards p {
   margin-bottom: 22px;
   font-size: 17px;
   line-height: 30px;
 }
+
 .testimonial .cards .image {
   display: flex;
   align-items: center;
@@ -567,52 +600,56 @@ header .container nav a {
   flex-direction: none;
   margin-bottom: 25px;
   opacity: 1;
-  transform: translateX(0); /* Sabit vəziyyətdə qalır */
+  transform: translateX(0);
+  /* Sabit vəziyyətdə qalır */
 }
+
 .testimonial .cards .image .img {
   width: 100px;
   height: 100px;
 }
+
 .testimonial .cards .image .img img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 50%;
 }
+
 .testimonial .cards .image .img-text {
   margin-left: 22px;
-  opacity: 1;
-  transform: translateX(0); /* Sabit vəziyyətdə qalır */
 }
+
 .testimonial .cards .image .img-text h3 {
   font-size: 20px;
   margin-bottom: 12px;
-  opacity: 0;
-  transform: translateX(-30px); /* Başlanğıcda gizli və sola doğru */
-  animation: slideInOut 3s ease-in-out infinite alternate; /* Təkrarlanan animasiya */
 }
+
 .testimonial .cards .image .img-text span {
   color: rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 3px;
-  opacity: 0;
-  transform: translateX(30px); /* Başlanğıcda gizli və sağa doğru */
-  animation: slideInOut 3s ease-in-out infinite alternate; /* Təkrarlanan animasiya */
 }
+
 @keyframes slideInOut {
   0% {
     opacity: 0;
-    transform: translateX(30px); /* Sağ tərəfdən gəlir */
+    transform: translateX(30px);
+    /* Sağ tərəfdən gəlir */
   }
+
   50% {
     opacity: 1;
-    transform: translateX(0); /* Normal vəziyyətə gəlir */
+    transform: translateX(0);
+    /* Normal vəziyyətə gəlir */
   }
+
   100% {
     opacity: 0;
-    transform: translateX(-30px); /* Sol tərəfə doğru gedir */
+    transform: translateX(-30px);
+    /* Sol tərəfə doğru gedir */
   }
 }
 
@@ -620,19 +657,26 @@ header .container nav a {
   position: relative;
   overflow: hidden;
 }
+
 .showcase .card-img {
   height: 400px;
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, filter 0.5s ease-in-out;
-  filter: grayscale(100%); /* Başlanğıcda şəkli boz tonlarda göstəririk */
+  filter: grayscale(100%);
+  /* Başlanğıcda şəkli boz tonlarda göstəririk */
 }
+
 .showcase .card-img:hover {
-  transform: scale(1.05) rotate(3deg); /* Hover zamanı böyümə və döndürmə */
-  opacity: 0.9; /* Hover zamanı şəffaflıq azaldılır */
-  filter: grayscale(0%) brightness(1.2); /* Parıltılı və rəngli görsənməsini təmin edirik */
+  transform: scale(1.05) rotate(3deg);
+  /* Hover zamanı böyümə və döndürmə */
+  opacity: 0.9;
+  /* Hover zamanı şəffaflıq azaldılır */
+  filter: grayscale(0%) brightness(1.2);
+  /* Parıltılı və rəngli görsənməsini təmin edirik */
 }
+
 .showcase .links {
   position: absolute;
   bottom: 20px;
@@ -643,9 +687,11 @@ header .container nav a {
   justify-content: flex-end;
   flex-direction: none;
   opacity: 0;
-  transform: translateY(30px); /* Linklər aşağıdan gəlir */
+  transform: translateY(30px);
+  /* Linklər aşağıdan gəlir */
   transition: opacity 0.5s ease, transform 0.5s ease;
 }
+
 .showcase .links a {
   padding: 12px 24px;
   background-color: rgba(255, 255, 255, 0.7);
@@ -655,20 +701,27 @@ header .container nav a {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
+
 .showcase .links a:hover {
   background-color: rgb(255, 255, 255);
-  transform: translateY(-5px); /* Linkin hover zamanı yuxarı doğru hərəkət etməsi */
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3); /* Daha böyük kölgə effekti */
+  transform: translateY(-5px);
+  /* Linkin hover zamanı yuxarı doğru hərəkət etməsi */
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+  /* Daha böyük kölgə effekti */
 }
+
 .showcase:hover .links {
-  opacity: 1; /* Hover zamanı linklər görünür olacaq */
-  transform: translateY(0); /* Linklər öz normal yerinə gələcək */
+  opacity: 1;
+  /* Hover zamanı linklər görünür olacaq */
+  transform: translateY(0);
+  /* Linklər öz normal yerinə gələcək */
 }
 
 .brand-content img {
   opacity: 0.5;
   transition: 0.5s ease-in-out;
 }
+
 .brand-content img:hover {
   opacity: 1;
   cursor: pointer;
@@ -677,22 +730,28 @@ header .container nav a {
 .blog-card .card {
   transition: transform 0.3s ease-out;
 }
+
 .blog-card .card:hover {
   animation: shake 0.5s ease-in-out;
 }
+
 @keyframes shake {
   0% {
     transform: translateX(0);
   }
+
   25% {
     transform: translateX(-10px);
   }
+
   50% {
     transform: translateX(10px);
   }
+
   75% {
     transform: translateX(-10px);
   }
+
   100% {
     transform: translateX(0);
   }
@@ -704,40 +763,48 @@ footer {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   overflow: hidden;
 }
+
 footer .logobg {
   line-height: 0;
   padding-top: 18px;
   margin-bottom: 60px;
 }
+
 footer h3 {
   font-weight: 400;
   letter-spacing: 2px;
   font-size: 16px;
   margin-bottom: 35px;
 }
+
 footer span,
 footer p {
   color: rgba(255, 255, 255, 0.5);
 }
+
 footer ul li a {
   color: rgba(255, 255, 255, 0.5);
   transition: 0.5s ease-in-out;
   margin-bottom: 20px;
   display: block;
 }
+
 footer ul li a:hover {
   color: #00dc93;
 }
-footer .connect {
+
+.connect {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-direction: none;
 }
+
 footer .connect span {
   font-size: 14px;
   letter-spacing: 2px;
 }
+
 footer::after {
   content: "";
   position: absolute;
@@ -770,13 +837,16 @@ footer::after {
 .agency .content {
   margin-top: 60px;
 }
+
 .agency .content h1 {
   font-size: 35px;
 }
+
 .agency .content .box h1 {
   font-size: 60px;
   font-weight: 400;
 }
+
 .agency .content .misson-p {
   border-left: 5px solid #845aff;
   padding-left: 30px;
@@ -785,6 +855,7 @@ footer::after {
 .showcase img {
   width: 300px;
 }
+
 .showcase .btn {
   display: flex;
   align-items: center;
@@ -795,6 +866,7 @@ footer::after {
 .contact .left {
   padding-right: 60px;
 }
+
 .contact .left ul {
   display: flex;
   align-items: center;
@@ -802,6 +874,7 @@ footer::after {
   flex-direction: none;
   margin-top: 60px;
 }
+
 .contact .left .icon {
   width: 50px;
   height: 50px;
@@ -812,40 +885,51 @@ footer::after {
   justify-content: center;
   flex-direction: none;
 }
+
 .contact .left .box {
   margin-bottom: 60px;
 }
+
 .contact .left .box .icons {
   color: #00dc93;
 }
+
 .contact .left .box h3 {
   padding: 20px 0;
 }
+
 .contact .left .box span {
   opacity: 0.5;
 }
+
 .contact .right {
   border-radius: 50px 0 50px 0;
   padding: 60px;
   background-color: #171e20;
 }
+
 .contact .right form {
   margin-top: 60px;
 }
+
 .contact .right .inputs {
   margin-bottom: 35px;
 }
+
 .contact .right .inputs span {
   text-transform: uppercase;
 }
+
 .contact .right .inputs textarea,
-.contact .right .inputs input {
+.contact .right .inputs input,
+.contact .right .inputs select {
   width: 100%;
   background-color: #ffffff;
   padding: 15px;
   margin-top: 14px;
   color: #080e10;
 }
+
 .contact .right button {
   width: 100%;
   padding: 18px;
@@ -856,32 +940,42 @@ footer::after {
 }
 
 @media screen and (max-width: 800px) {
+  .hero-title {
+    font-size: 48px !important;
+  }
+
   .banner .container {
     display: flex;
     align-items: center;
     justify-content: none;
     flex-direction: column;
   }
+
   .banner .container button {
     margin-top: 50px;
   }
+
   .banner .container h1 {
     font-size: 30px;
   }
+
   .blog-card .card {
     display: flex;
     align-items: none;
     justify-content: none;
     flex-direction: column;
   }
+
   .blog-card .card .card-img {
     width: 100%;
     height: 300px;
   }
+
   .blog-card .card .card-details {
     width: 100%;
     padding: 0;
   }
+
   .w-30,
   .w-40,
   .w-50,
@@ -890,28 +984,36 @@ footer::after {
     width: 100%;
     margin: 0;
   }
+
   .agency .flex,
   .agency .flex1 {
     flex-direction: column;
   }
+
   .agency .grid-3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 50px;
   }
+
   .contact .content {
     flex-direction: column;
   }
+
   .contact .content .left {
     text-align: center;
     margin-bottom: 50px;
   }
+
   .contact .content .left ul {
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
   .contact .content .left ul li {
     margin: 0 20px;
   }
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
