--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,5 +1,6 @@
 /*  Hero Section */
 .hero {
+  color: $white !important;
   text-align: center;
   padding: $xl-6 0;
   padding-top: $xll-3;
@@ -21,7 +22,7 @@
   }
   .hero-title {
     font-size: $xll-3;
-    line-height: 115px;
+    line-height: 1.3em;
     font-weight: 600;
     margin: $xl-6 0;
   }
@@ -52,20 +53,7 @@
   }
   
 }
-.hero-sec {
-  position: relative;
-  &::before {
-    content: "";
-    position: absolute;
-    top: -10%;
-    left: 0%;
-    width: 100%;
-    height: 200px;
-    z-index: -1;
-    background-color: $dark;
-    filter: blur(20px);
-  }
-}
+
 
 // expertise
 .expertise {
@@ -86,7 +74,7 @@
     border-radius: 50px 50px 0;
     padding: $xl-6;
     border: 4px solid rgb(192, 90, 255);
-    @include flex(center, space-between, none);
+    @include flex(flex-start, flex-start, column);
   }
 }
 
@@ -374,7 +362,7 @@ footer {
   .right {
     border-radius: 50px 0 50px 0;
     padding: $xll;
-    background-color: #171e20;
+    border: 1px solid $dark;
     form {
       margin-top: $xll;
     }
@@ -386,10 +374,12 @@ footer {
       textarea,
       input, select {
         width: 100%;
-        background-color: $white;
         padding: 15px;
+        background-color: transparent;
         margin-top: $sm;
-        color: $dark;
+        border: 1px solid $dark;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba($white, 0.5);
       }
     }
     button {
@@ -476,4 +466,23 @@ footer {
       flex-direction: column;
     }
   }
+}
+
+
+.header-right-burger-darkmode{
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+@media screen and (max-width: 950px) {
+  .hero .sub-heading{
+    flex-direction: column;
+    span{
+      display: none;
+    }
+  }
+  .hero-title {
+    margin-bottom: 2.5em !important;
+  }
+ 
 }
