--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 .green {
-  color: #00dc93;
+  color: rgb(0, 204, 204);
 }
 
 .indigo {
@@ -12,12 +12,18 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: inherit !important;
 }
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #080e10;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #080e10;
+}
+
+.dark-mode-body {
+  color: #ffffff !important;
+  background-color: #080e10 !important;
 }
 
 .container {
@@ -167,8 +173,8 @@ p {
 }
 .title-logo span {
   font-size: 30px;
-  -webkit-text-stroke: #00dc93;
-  color: #00dc93;
+  -webkit-text-stroke: rgb(0, 204, 204);
+  color: rgb(0, 204, 204);
 }
 
 .logobg {
@@ -204,16 +210,16 @@ p {
   text-transform: capitalize;
   color: #ffffff;
   padding: 13px 40px;
-  background-color: #00dc93;
+  background-color: rgb(0, 204, 204);
   font-size: 15px;
   border-radius: 50px;
-  box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 204, 204, 0.5);
   cursor: pointer;
   transition: box-shadow 0.3s ease-in-out;
 }
 .secondary-button:hover,
 .button-primary:hover {
-  box-shadow: 0 0 20px rgba(0, 255, 0, 0.7);
+  box-shadow: 0 0 20px rgba(0, 204, 204, 0.8);
 }
 
 .secondary-button {
@@ -228,7 +234,7 @@ p {
   transition: 0.5s ease-in-out;
 }
 .secondary-button:hover {
-  color: #00dc93;
+  color: rgb(0, 204, 204);
 }
 
 .heading-title {
@@ -247,7 +253,7 @@ p {
   transition: 0.5s;
 }
 .card h1:hover {
-  color: #00dc93;
+  color: rgb(0, 204, 204);
   cursor: pointer;
 }
 .card .card-img {
@@ -403,7 +409,7 @@ header .container nav a {
 
 .activeLink {
   position: relative;
-  color: #00dc93;
+  color: rgb(0, 204, 204);
 }
 .activeLink::after {
   content: "";
@@ -412,7 +418,7 @@ header .container nav a {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #00dc93;
+  background-color: rgb(0, 204, 204);
 }
 
 @media screen and (max-width: 800px) {
@@ -446,6 +452,7 @@ header .container nav a {
 }
 /*  Hero Section */
 .hero {
+  color: #ffffff !important;
   text-align: center;
   padding: 35px 0;
   padding-top: 100px;
@@ -482,7 +489,7 @@ header .container nav a {
 .hero .sub-heading span {
   font-size: 60px;
   line-height: 0;
-  color: #00dc93;
+  color: rgb(0, 204, 204);
   animation: bounceText 2s ease-in-out infinite;
 }
 @keyframes bounceText {
@@ -492,21 +499,6 @@ header .container nav a {
   50% {
     transform: translateY(-5px);
   }
-}
-
-.hero-sec {
-  position: relative;
-}
-.hero-sec::before {
-  content: "";
-  position: absolute;
-  top: -10%;
-  left: 0%;
-  width: 100%;
-  height: 200px;
-  z-index: -1;
-  background-color: #080e10;
-  filter: blur(20px);
 }
 
 .expertise .card-img {
@@ -701,7 +693,7 @@ footer ul li a {
   display: block;
 }
 footer ul li a:hover {
-  color: #00dc93;
+  color: rgb(0, 204, 204);
 }
 footer .connect {
   display: flex;
@@ -793,7 +785,7 @@ footer::after {
   margin-bottom: 60px;
 }
 .contact .left .box .icons {
-  color: #00dc93;
+  color: rgb(0, 204, 204);
 }
 .contact .left .box h3 {
   padding: 20px 0;
@@ -804,7 +796,7 @@ footer::after {
 .contact .right {
   border-radius: 50px 0 50px 0;
   padding: 60px;
-  background-color: #171e20;
+  border: 1px solid #080e10;
 }
 .contact .right form {
   margin-top: 60px;
@@ -818,10 +810,12 @@ footer::after {
 .contact .right .inputs textarea,
 .contact .right .inputs input, .contact .right .inputs select {
   width: 100%;
-  background-color: #ffffff;
   padding: 15px;
+  background-color: transparent;
   margin-top: 14px;
-  color: #080e10;
+  border: 1px solid #080e10;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 }
 .contact .right button {
   width: 100%;
@@ -833,12 +827,12 @@ footer::after {
 }
 
 .burger-menu-button {
-  display: block;
+  display: none;
 }
 
 @media screen and (max-width: 800px) {
   .burger-menu-button {
-    display: none;
+    display: block;
   }
   .hero-title {
     font-size: 48px !important;
