--- a/styles/main.css
+++ b/styles/main.css
@@ -393,8 +393,8 @@ header {
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
   position: sticky;
   top: 0;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px) contrast(0.7);
+          backdrop-filter: blur(10px) contrast(0.7);
   z-index: 999;
 }
 header .container {
@@ -432,7 +432,6 @@ header .container nav a {
     width: 100%;
     height: 40vh;
     padding: 20px;
-    background: #080e10;
     display: flex;
     flex-direction: column;
     z-index: 999;
@@ -442,6 +441,16 @@ header .container nav a {
     display: block;
     display: flex;
     margin-bottom: 30px !important;
+  }
+  header .openMenu-light {
+    background-color: #ffffff !important;
+    color: #080e10 !important;
+    border-top: 1px solid #080e10;
+  }
+  header .openMenu-dark {
+    background-color: #080e10 !important;
+    color: #ffffff !important;
+    border-top: 1px solid #ffffff;
   }
   header .button-primary {
     display: none;
@@ -475,7 +484,7 @@ header .container nav a {
 }
 .hero .hero-title {
   font-size: 100px;
-  line-height: 115px;
+  line-height: 1.3em;
   font-weight: 600;
   margin: 35px 0;
 }
@@ -517,9 +526,9 @@ header .container nav a {
   padding: 35px;
   border: 4px solid rgb(192, 90, 255);
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: none;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
 }
 
 .testimonial .card {
@@ -877,8 +886,9 @@ footer::after {
   }
   .agency .grid-3 {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-gap: 50px;
+    justify-content: center;
   }
   .contact .content {
     flex-direction: column;
@@ -895,4 +905,27 @@ footer::after {
   .contact .content .left ul li {
     margin: 0 20px;
   }
+}
+.header-right-burger-darkmode {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+@media screen and (max-width: 950px) {
+  .hero .sub-heading {
+    flex-direction: column;
+  }
+  .hero .sub-heading span {
+    display: none;
+  }
+  .hero-title {
+    margin-bottom: 2.5em !important;
+  }
+}
+.logo-link-logo {
+  height: 100%;
+  display: block;
+  position: relative;
+  top: 5px;
 }/*# sourceMappingURL=main.css.map */
